# PaperEnvBench

./: .gitignore  README.md  pyproject.toml
docs/: environment_dependency_report_schema.json
docs/environment_dependency_notes/: diffusion_vlm.md  geometry_cuda.md  graph_torch_cuda.md  openmmlab_detectron_grounding.md
paperenvbench/: README.md  __init__.py  evaluator.py  taxonomy.yaml
paperenvbench/registries/: asset_registry.yaml  environment_dependency_registry.yaml  experiment_registry.yaml  skill_registry.yaml  task_registry.yaml  trajectory_registry.yaml
paperenvbench/tasks/bert_masked_lm_minimal/: README_eval.md  assets_manifest.yaml  expected_output.json  failure_tags.yaml  gold_install.sh  meta.yaml  repo_snapshot.json  requirements_lock.txt  scoring.yaml  taxonomy.yaml  verify.py
paperenvbench/tasks/blip_caption_minimal/: README_eval.md  assets_manifest.yaml  expected_output.json  failure_tags.yaml  gold_install.sh  meta.yaml  repo_snapshot.json  requirements_lock.txt  scoring.yaml  taxonomy.yaml  verify.py
paperenvbench/tasks/cleanrl_cartpole_minimal/: README_eval.md  assets_manifest.yaml  expected_output.json  failure_tags.yaml  gold_install.sh  (+6 more)
tools/paper_repo_env/: accelerator_runtime_probe.py  adaptive_gpu_floor_guard.py  build_install_plan.py  clip_smoke.py  evaluate_attempt.py  gpu_occupancy_guard.py  inspect_repo.py  run_environment_dependency_suite.py  sam_smoke.py  setup_environment_dependency_runtime.sh  supervise_adaptive_gpu_floor_guard.sh  validate_environment_dependency_report.py  validate_task_package.py  write_failure_report.py
(+577 files in other folders)
